--- a/css/style.css
+++ b/css/style.css
@@ -1,28 +1,157 @@
-* {
+/* GLOBAL */
+html {
     box-sizing: border-box;
+    height: 100%;
+    scroll-behavior: smooth;
+}
+
+*, 
+*::before,
+*::after {
+    box-sizing: inherit;
 }
 
 body {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
     padding: 0;
     margin: 0;
-    font-family: "Open Sans", "Arial", sans-serif;
+    font-family: "Arial", sans-serif;
     font-size: 16px;
-    background-color: #fff;
     line-height: 1.5;
+    background-color: #fff;
+    color: #222;
 }
 
-*:focus {
-    outline: 2px solid #ff7500;
-    outline-offset: 3px;
-  }
+img {
+    min-width: 100%;
+    height: auto;
+}
 
+/* CONTAINER */
 .container {
     width: 100%;
-    max-width: 1260px;
-    padding-left: 30px;
-    padding-right: 30px;
+    max-width: 1200px;
+    padding-left: 50px;
+    padding-right: 50px;
     margin-left: auto;
     margin-right: auto;
+}
+
+.main-content {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+/* GLOBAL-WRAPPER */
+.global-wrapper {
+    flex-grow: 1;
+    display: flex;
+    width: 100%;
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+/* HERO */
+.hero {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    max-width: 600px;
+    background-image: url(../img/wallpaper-img.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+.hero-content {
+    max-width: 285px;
+}
+
+.hero-heading {
+    margin-top: 0;
+    margin-bottom: 24px;
+    font-size: 24px;
+    line-height: normal;
+    letter-spacing: 2px;
+    color: #fff;
+    text-transform: uppercase;
+}
+
+.hero-link {
+    display: inline-block;
+    background-color: #1e90ff;
+    color: #fff;
+    text-decoration: none;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+}
+
+.hero-link-inner {
+    display: flex;
+    padding: 12px 24px;
+}
+
+.hero-link-inner::before {
+    width: 20px;
+    height: 20px;
+    margin-right: 12px;
+    background-image: url(../img/icon-vector.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    content: "";
+}
+
+.hero-link-text {
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* .main-text {
+    width: 580px;
+    height: 100px;
+    padding-top: 200px;
+}
+
+h3 {
+    padding: 0;
+    margin: 0;
+    margin-left: 16px;
+    margin-bottom: 10px;
+    font-family: Bebas Neue;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 21.6px;
+    letter-spacing: 2px;
+    text-align: left;
+}
+
+.span-text {
+    font-family: Roboto Condensed;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: auto
+    text-align: left;
+    color: rgba(136, 136, 136, 1);
+}
+
+.span-img {
+    margin-left: 16px;
 }
 
 .box {
@@ -30,12 +159,54 @@ body {
 }
 
 .main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     width: 600px;
     height: 782px;
     background-image: url(../img/wallpaper-img.png);
+    text-align: center;
 }
 
 .hero {
     width: 600px;
     height: 782px;
+    padding-left: 55px;
 }
+
+.button {
+    width: 164px;
+    height: 48px;
+    background: rgba(30, 144, 255, 1);
+    color: white;
+}
+
+.main-span-text {
+    font-family: Bebas Neue;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 2px;
+    text-align: left;
+    text-transform: uppercase;
+
+}
+.line {
+    border: 1px solid rgba(153, 153, 153, 1)
+}
+.hero-poster {
+    display: flex;
+    width: 492px;
+    height: 92px;
+    margin-bottom: 10px;
+}
+
+.hero-poster-heading {
+    padding: 0;
+    margin: 0;
+}
+
+.hero-img {
+    width: 160px;
+    height: 90px;
+} */
